# S-DLV_Client

./: CMakeLists.txt  Dependencies.cmake
src/: CMakeLists.txt  SDLVC_CLI.h  main.cpp
src/net/: CMakeLists.txt  NWInterface.cpp  NWInterface.h
src/prep/: CMakeLists.txt  XMLPreprocessingResult.h  XMLPreprocessor.cpp  XMLPreprocessor.h
src/tester/: CMakeLists.txt  Tester.cpp  Tester.h
src/xmlproc/: CMakeLists.txt  XMLProcessingResult.h  XMLProcessor.cpp  XMLProcessor.h
